src/scss/base/_responsive.scss
@media (min-width: 1280px){
    .row-100{
	margin-left: -50px;
	margin-right: -50px;
	> .col,
	> [class*="col-"] {
	    padding-left: 50px;
	    padding-right: 50px;
	}
    }
    .row-35{
	margin-left: -18px;
	margin-right: -18px;
	> .col,
	> [class*="col-"] {
	    padding-left: 18px;
	    padding-right: 18px;
	}
    }
}
@include media-breakpoint-up(lg) {
    .col-lg-5-12{
	flex: 0 0 20%;
	min-width: 20%;
    }
    .post-content{
	padding: 2rem;
    }
    .single-post{
	.post-img{
	    margin: 1rem -2rem;
	}
    }
}
@include media-breakpoint-up(sm) {
    .page-header{
	&.bg-2{
	    padding: rem(26px 0);
	}
    }
    .agreement-progress{
	.heading br{
	    display: none;
	}
	.line:after{
	    height: 6px;
	}
	.indicator {
	    width: 53px;
	    height: 53px;
	    .icon{
		width: 30px;
		height: 30px;
	    }
	}
	.done{
	    .icon{
		width: 40px;
		height: 32px;
	    }
	}
    }
    .reviews.owl-carousel{
	padding-left: 38px;
	padding-right: 38px;
    }
}
@include media-breakpoint-up(lg) {
    .payment-options{
	.amount {
	    font-size: rem(19px);
	}
	.check{
	    .choice{
		width: 48px;
		height: 48px;
		border-radius: 50%;
		.icon{
		    width: 31px;
		    height: 31px;
		}
	    }
	}
    }
}
@include media-breakpoint-down(sm) {
    .page-header .h1 {
	font-size: 1.2rem;
    }
}
@media(min-width:480px) and (max-width: 991px) {
    .review .review-heading{
	flex-direction: column;
	align-items: flex-start;
    }
}
@include media-breakpoint-down(md) {
    .form-row{
	[class*="col-lg-"]{
	    margin-bottom: 1rem;
	}
    }
}
@media(max-width: 479px){
    .btn-close {
	right: 2px;
	top: 2px;
    }
}
@media(max-width: 374px){
    .btn-group-lg>.btn, .btn-lg {
	font-size: 1.2rem;
    }
    .h1, .h2, h1, h2 {
	font-size: 1.5rem;
    }
    .payment-options .payment>* {
	padding-left: 5px;
	padding-right: 5px;
    }
    .card-body {
	padding: .6rem;
    }
}

